# libmatrix

./: CMakeLists.txt  README.md
includes/: conversion.h  general.h  libmatrix.h  libmatrix_structs.h  matrix.h  operations_matrix.h  operations_matrix_vector.h  quaternion.h  quaternion_var.h  structs.h  vector.h  vector_var.h
matrix/: matrix.h  matrix_add.c  matrix_add_new.c  matrix_addscalar.c  matrix_cat.c  matrix_cpy.c  matrix_create.c  matrix_free.c  matrix_mult.c  matrix_mult_into_existing.c  matrix_multscalar.c  matrix_print.c  matrix_set_unit.c  matrix_sub.c  matrix_sub_new.c  matrix_subscalar.c  matrix_to_array.c
matrix/mat4/: mat4_add.c  mat4_add_scalar.c  mat4_init.c  mat4_init_null.c  mat4_mult.c  mat4_mult_scalar.c  mat4_print.c  mat4_sub.c  mat4_sub_scalar.c
operations/: m_camera.c  m_orthographic.c  m_perspective.c  m_rotate.c  m_scale.c  m_translate.c  m_yawpitchroll.c  m_yawpitchroll_new.c  mv_mult.c  mv_mult_new.c  operations.h
operations/matrix/: m_camera.c  m_orthographic.c  m_perspective.c  m_rotate.c  m_rotate_new.c  m_scale.c  m_scale_new.c  m_translate.c  m_translate_new.c  m_yawpitchroll.c  m_yawpitchroll_new.c  mat4_camera.c  mat4_orthographic.c  mat4_perspective.c  mat4_rotate.c  mat4_scale.c  mat4_translate.c  mat4_yawpitchroll.c  operations_matrix.h
operations/matrix/modify/: m_rotate_modify.c  m_scale_modify.c  m_translate_modify.c  m_yawpitchroll_modify.c
operations/matrix/multiplication/: m_rotate_mult.c  m_scale_mult.c  m_translate_mult.c  m_yawpitchroll_mult.c
operations/matrix/new/: m_camera.c  m_perspective.c  m_scale_new.c  m_yawpitchroll_new.c
operations/matrix_vector/: mat_vec_4_mult.c  mv_mult.c  mv_mult_new.c  mv_mult_var.c  operations_matrix_vector.h
quaternion/: quat_conjugate.c  quat_conjugate_new.c  quat_norm.c  quat_norm_nosqrt.c  quat_reverse.c  quat_reverse_new.c  quaternion.h  quaternion_conjugate.c  quaternion_norm.c  quaternion_norm_nosqrt.c  quaternion_reverse.c
quaternion/quaternion_variable/: quat_var_conjugate.c  quat_var_norm.c  quat_var_norm_nosqrt.c  quat_var_reverse.c  quaternion_var.h
source/conversion/: to_matrix.c  to_matrix_d.c  to_quaternion.c  to_quaternion_d.c
source/matrix/: mat2.c  mat2d.c  mat3.c  mat3d.c  mat4.c  mat4d.c
source/quaternion/: quaternion.c  quaterniond.c
source/vector/: vec2.c  vec2d.c  vec3.c  vec3d.c  vec4.c  vec4d.c
vector/: vector.h  vector_add.c  vector_add_new.c  vector_addscalar.c  vector_cat.c  vector_cpy.c  vector_create.c  vector_divscalar.c  vector_multscalar.c  vector_normal.c  vector_rev.c  vector_smult.c  vector_sub.c  vector_sub_new.c  vector_subscalar.c  vector_to_array.c  vector_vmult.c
vector/vec2/: vec2_add.c  vec2_add_scalar.c  vec2_div_scalar.c  vec2_mult_scalar.c  vec2_normal.c  vec2_rev.c  vec2_scalar_mult.c  vec2_sub.c  vec2_sub_scalar.c
vector/vec3/: vec3_add.c  vec3_add_scalar.c  vec3_div_scalar.c  vec3_mult_scalar.c  vec3_normal.c  vec3_rev.c  vec3_scalar_mult.c  vec3_sub.c  vec3_sub_scalar.c  vec3_vector_mult.c
vector/vec4/: vec4_add.c  vec4_add_scalar.c  vec4_div_scalar.c  vec4_mult_scalar.c  vec4_normal.c  vec4_rev.c  vec4_scalar_mult.c  vec4_sub.c  vec4_sub_scalar.c
vector/vector_variable/: vector_var.h  vector_var_add.c  vector_var_addscalar.c  vector_var_create.c  vector_var_divscalar.c  vector_var_multscalar.c  vector_var_normal.c  vector_var_rev.c  vector_var_smult.c  vector_var_sub.c  vector_var_subscalar.c  vector_var_vmult.c
